Fixed text overflow in PartitionItem styles.sass

--- a/src/renderer/src/pages/setup/Partition/components/PartitionItem/styles.sass
+++ b/src/renderer/src/pages/setup/Partition/components/PartitionItem/styles.sass
@@ -19,6 +19,8 @@
     font-weight: 400
     text-align: center
     width: 10rem
+    overflow: hidden
+    text-overflow: ellipsis
 
   p
     margin: 0
